--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
     "babili-webpack-plugin": "^0.1.2",
     "css-loader": "^0.28.7",
     "electron": "^1.4.1",
@@ -43,6 +44,7 @@
     "webpack-dev-server": "^2.9.1"
   },
   "dependencies": {
+    "react-tap-event-plugin": "^3.0.2",
     "serialport": "^4.0.7"
   }
 }
