--- a/package.json
+++ b/package.json
@@ -39,12 +39,13 @@
     "html-webpack-plugin": "^2.30.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "style-loader": "^0.19.0",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
   },
   "dependencies": {
-    "react-tap-event-plugin": "^3.0.2",
     "serialport": "^4.0.7"
   }
 }
