--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "react": "^16.0.0",
+    "react-alert": "^2.4.0",
     "react-dom": "^16.0.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
