--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "^16.0.0",
     "react-alert": "^2.4.0",
     "react-dom": "^16.0.0",
+    "react-portal": "^4.0.0-rc.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "style-loader": "^0.19.0",
