--- a/package.json
+++ b/package.json
@@ -1,54 +1,52 @@
 {
-  "name": "electron-opn",
-  "version": "1.0.1",
-  "description": "An Electron wrapper for interacting with Opticon's OPN-2001 devices.",
-  "main": "main.js",
-  "scripts": {
-    "start": "electron .",
-    "install": "electron-rebuild",
-    "prod": "webpack --config webpack.build.config.js && electron --noDevServer .",
-    "dev": "webpack-dev-server --hot --host 0.0.0.0 --config=./webpack.dev.config.js",
-    "build": "webpack --config webpack.build.config.js",
-    "package": "webpack --config webpack.build.config.js",
-    "postpackage": "electron-packager ./ --out=./builds"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/C-Rodg/OPN-Device-application.git"
-  },
-  "keywords": [
-    "Electron",
-    "Opticon",
-    "OPN-2001",
-    "scan"
-  ],
-  "author": "C-Rodg",
-  "license": "MIT",
-  "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "babili-webpack-plugin": "^0.1.2",
-    "css-loader": "^0.28.7",
-    "electron": "^1.4.1",
-    "electron-rebuild": "^1.4.0",
-    "extract-text-webpack-plugin": "^3.0.1",
-    "file-loader": "^1.1.5",
-    "html-webpack-plugin": "^2.30.1",
-    "moment": "^2.19.1",
-    "react": "^16.0.0",
-    "react-alert": "^2.4.0",
-    "react-dom": "^16.0.0",
-    "react-portal": "^4.0.0-rc.0",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "style-loader": "^0.19.0",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
-  },
-  "dependencies": {
-    "serialport": "^4.0.7"
-  }
+	"name": "electron-opn",
+	"version": "1.0.1",
+	"description":
+		"An Electron wrapper for interacting with Opticon's OPN-2001 devices.",
+	"main": "main.js",
+	"scripts": {
+		"start": "electron .",
+		"install": "electron-rebuild",
+		"prod":
+			"webpack --config webpack.build.config.js && electron --noDevServer .",
+		"dev":
+			"webpack-dev-server --hot --host 0.0.0.0 --config=./webpack.dev.config.js",
+		"build": "webpack --config webpack.build.config.js",
+		"package": "webpack --config webpack.build.config.js",
+		"postpackage": "electron-packager ./ --out=./builds"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/C-Rodg/OPN-Device-application.git"
+	},
+	"keywords": ["Electron", "Opticon", "OPN-2001", "scan"],
+	"author": "C-Rodg",
+	"license": "MIT",
+	"devDependencies": {
+		"babel-core": "^6.26.0",
+		"babel-loader": "^7.1.2",
+		"babel-plugin-transform-class-properties": "^6.24.1",
+		"babel-preset-react": "^6.24.1",
+		"babel-preset-stage-1": "^6.24.1",
+		"babili-webpack-plugin": "^0.1.2",
+		"css-loader": "^0.28.7",
+		"electron": "^1.4.1",
+		"electron-rebuild": "^1.4.0",
+		"extract-text-webpack-plugin": "^3.0.1",
+		"file-loader": "^1.1.5",
+		"html-webpack-plugin": "^2.30.1",
+		"moment": "^2.19.1",
+		"react": "^16.0.0",
+		"react-alert": "^2.4.0",
+		"react-dom": "^16.0.0",
+		"react-portal": "^4.0.0-rc.0",
+		"react-router": "^4.2.0",
+		"react-router-dom": "^4.2.2",
+		"style-loader": "^0.19.0",
+		"webpack": "^3.6.0",
+		"webpack-dev-server": "^2.9.1"
+	},
+	"dependencies": {
+		"serialport": "^4.0.7"
+	}
 }
