--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "author": "C-Rodg",
   "license": "MIT",
   "devDependencies": {
+    "axios": "^0.17.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
